Fixed overflow scrolling issue on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html, body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .details-container {
